--- a/calculadora-imc.html
+++ b/calculadora-imc.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IMC</title>
     <link rel="stylesheet" href="calculadora-imc.css">
+    <link rel="icon" href="Calculadora-IMC/exercicio.png">
     <link href="https://lari-nunes.github.io/Calculadora-IMC/calculadora-imc.css" rel="stylesheet"/>
     <script scr="https://lari-nunes.github.io/Calculadora-IMC/calculadora-imc.js"></script 
 </head>
